--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,3 +17,167 @@
  @import "bootstrap-sprockets";
  @import "bootstrap";
  @import "font-awesome";
+
+/*------------------------------- 轮播功能区 ------------------------------*/
+ html, body{
+   width:100%;
+   height:100%;
+   background-color:#fff;
+ font-family: 'Sansita', sans-serif;
+   }
+ .carousel-inner,.carousel,.item,.container,.fill {
+ height:100%;
+ width:100%;
+ background-position:center center;
+ background-size:cover;
+ }
+ .slide-wrapper{display:inline;}
+ .slide-wrapper .container{padding:0px;}
+
+ /*------------------------------ 垂直引导滑块----------------------------*/
+
+ .carousel-inner> .item.next ,  .carousel-inner > .item.active.right{ transform: translateY(100%); -webkit-transform: translateY(100%); -ms-transform: translateY(100%);
+ -moz-transform: translateY(100%); -o-transform: translateY(100%);  top: 0;left:0;}
+ .carousel-inner > .item.prev ,.carousel-inner > .item.active.left{ transform: translateY(-100%); -webkit-transform: translateY(-100%);  -moz-transform: translateY(-100%);
+ -ms-transform: translateY(-100%); -o-transform: translateY(-100%); top: 0; left:0;}
+ .carousel-inner > .item.next.left , .carousel-inner > .item.prev.right , .carousel-inner > .item.active{transform:translateY(0); -webkit-transform:translateY(0);
+ -ms-transform:translateY(0);-moz-transform:translateY(0); -o-transform:translateY(0); top:0; left:0;}
+
+ /*------------------------------- 垂直旋转指标 ------------------------------*/
+ .carousel-indicators{
+ position:absolute;
+ top:0;
+ bottom:0;
+ margin:auto;
+ height:20px;
+ right:10px; left:auto;
+ width:auto;
+ }
+ .carousel-indicators li{display:block; margin-bottom:5px; border:1px solid #0000FF; }
+ .carousel-indicators li.active{margin-bottom:5px; background:#0000FF;}
+ /*-------- 动画滑块 ------*/
+
+ .animated{
+ animation-duration:3s;
+ -webkit-animation-duration:3s;
+ -moz-animation-duration:3s;
+ -ms-animation-duration:3s;
+ -o-animation-duration:3s;
+ visibility:visible;
+ opacity:1;
+ transition:all 0.3s ease;
+ }
+ .carousel-img{
+  display: inline-block;
+   margin: 0 auto;
+   width: 100%;
+   text-align: center;
+ }
+ .item img{margin:auto;visibility:hidden; opacity:0; transition:all 0.3s ease; -webkit-transition:all 0.3s ease; -moz-transition:all 0.3s ease; -ms-transition:all 0.3s ease; -o-transition:all 0.3s ease;}
+ .item1 .carousel-img img , .item1.active .carousel-img img{max-height:300px;}
+ .item1.active .carousel-img img.animated{visibility:visible; opacity:1; transition:all 1s ease; -webkit-transition:all 1s ease; -moz-transition:all 1s ease; -ms-transition:all 1s ease; -o-transition:all 1s ease;
+ animation-duration:2s; -webkit-animation-duration:2s; -moz-animation-duration:2s; -ms-animation-duration:2s; -o-animation-duration:2s; animation-delay:0.3s ; -webkit-animation-delay:0.3s;
+ -moz-animation-delay:0.3s;-ms-animation-delay:0.3s; }
+ .item .carousel-desc{color:#fff; text-align:center;}
+ .item  h2{font-size:50px; animation-delay:1.5s;animation-duration:1s; }
+ .item  p{animation-delay:2.5s;animation-duration:1s; width:50%; margin:auto;}
+
+ .item2 .carousel-img img , .item2.active .carousel-img img{max-height:300px;}
+ .item2.active .carousel-img img.animated{visibility:visible; opacity:1; transition:all 0.3s ease; animation-duration:3s; animation-delay:0.3s}
+ .item2 h2 , item2.active h2{visibility:hidden; opacity:0; transition:all 5s ease;}
+ .item2.active h2.animated{visibility:visible; opacity:1;  animation-delay:3s;}
+
+ .item .fill{padding:0px 30px; display:table; }
+ .item .inner-content{display: table-cell;vertical-align: middle;}
+ .item3 .col-md-6{float:none; display:inline-block; vertical-align:middle; width:49%;}
+
+ .item3.active .carousel-img img.animated{visibility:visible; opacity:1; transition:all 0.3s ease; animation-duration:2s; animation-delay:0.3s}
+ .item3 h2 , item3.active h2{visibility:hidden; opacity:0; transition:all 5s ease; }
+ .item.item3 .carousel-desc{text-align:left;}
+ .item3.active h2.animated{visibility:visible; opacity:1;  animation-delay:1.5s}
+ .item3 p , item3.active p{visibility:hidden; opacity:0; transition:all 5s ease; width:100%;  }
+ .item3.active p.animated{visibility:visible; opacity:1;  animation-delay:2.5s;}
+
+ @media(max-width:991px)
+ {
+ .item .carousel-desc , .item.item3 .carousel-desc{text-align:center;}
+ .item .carousel-desc p {width:80%;}
+ .item3 .col-md-6{width:100%; text-align:center;}
+ }
+ @media(max-width:768px)
+ {
+ .item .carousel-img img, .item.active .carousel-img img{max-height:155px;}
+ .item  h2{font-size:30px; margin-top:0px;}
+ .item .carousel-desc p{width:100%; font-size:12px;}
+ }
+ @media(max-width:480px)
+ {
+ .item  h2{font-size:30px;}
+ .item .carousel-desc p{width:100%;}
+ }
+/*------------------------------- 轮播功能区 ------------------------------*/
+/*--- 导航栏满屏 ---*/
+html { height: 100%;}
+  body { min-height: 100%; display: flex; flex-direction: column;}
+  .content { flex: 1;}
+
+  /*--- Partner Part Starts here ---*/
+  .partner{
+  	background:#bbbbbb;
+  }
+  #flexiselDemo3 {
+  	display: none;
+  }
+  .nbs-flexisel-container {
+  	position: relative;
+  	max-width: 100%;
+  	margin-bottom:3em;
+  }
+  .nbs-flexisel-ul {
+  	position: relative;
+  	width: 9999px;
+  	margin: 0px;
+  	padding: 0px;
+  	list-style-type: none;
+  	text-align: center;
+  }
+  .nbs-flexisel-inner {
+  	overflow: hidden;
+  	width:90%;
+  	margin: 0 auto;
+  	padding:2em 0;
+  }
+  .nbs-flexisel-item {
+  	float: left;
+  	margin: 0px;
+  	padding: 0px;
+  	cursor: pointer;
+  	position: relative;
+  	line-height: 0px;
+  }
+  .nbs-flexisel-item > img {
+  	cursor: pointer;
+  	positon: relative;
+  	max-width:400px;
+  	max-height:240px;
+  }
+  /*** Navigation ***/
+  .nbs-flexisel-nav-left, .nbs-flexisel-nav-right {
+  	width: 80px;
+  	height: 128px;
+  	position: absolute;
+  	cursor: pointer;
+  	z-index: 100;
+  	margin:2em 0;
+  }
+  .flexy .nbs-flexisel-nav-left, .flexy .nbs-flexisel-nav-right{
+  	margin:0 !important;
+  }
+  .nbs-flexisel-nav-left {
+  	left: 0px;
+  	background: url(http://oq3mpwc6v.bkt.clouddn.com/slide-arw.png) no-repeat 0px 0px;
+  }
+  .nbs-flexisel-nav-right {
+  	right: 0px;
+  	background: url(http://oq3mpwc6v.bkt.clouddn.com/slide-arw.png) no-repeat -48px 0px;
+  }
