--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,12 +9,15 @@
     </head>
 
     <body>
-
+      <%= render "common/flashes" %>
+       <div class="content">
         <div class="container-fluid">
+          <div class="row">
             <%= render "common/navbar" %>
-            <%= render "common/flashes" %>
             <%= yield %>
         </div>
+      </div>
+    </div>
 
         <%= render "common/footer" %>
 
