--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -75,7 +75,7 @@
                                     </div>
                                 </div>
 
-                                <div class="col-md-6 text-left">
+                                <div class="col-md-6 text-right">
                                     <div class="carousel-desc">
 
                                         <h2>Charming Aroma Taste Into The Heart</h2>
@@ -92,6 +92,7 @@
         </div>
     </section>
 </body>
+<!--小图轮播-->
 <div class="partner">
 				<ul id="flexiselDemo3">
 				   <li><img src="http://oq3mpwc6v.bkt.clouddn.com/uploads/product/image/1/medium_%E5%86%B0%E9%85%922.jpg" class="img-responsive" alt=""/></li>
@@ -131,5 +132,314 @@
 			 </script>
 	         <script type="text/javascript" src="app/assets.application.js"></script>
 		</div>
+    <!--gallery-->
+	<div class="gallery">
+		<div class="container">
+			<div class="gallery-grids">
+				<div class="col-md-6 gallery-grid glry-one">
+					<a href="products/1"><img src="http://oq3mpwc6v.bkt.clouddn.com/%E5%A5%94%E5%AF%8C1.jpg" class="img-responsive" alt=""/>
+						<div class="gallery-info">
+							<p><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span> view</p>
+							<a class="shop" rel="nofollow" data-method="post" href="/products/1/add_to_cart">加入购物车</a>
+							<div class="clearfix"> </div>
+						</div>
+					</a>
+					<div class="galy-info">
+						<p>奔富407干红葡萄酒 澳洲BIN407 原瓶进口红酒 2014年木塞整箱 750ml*6</p>
+						<div class="galry">
+							<div class="prices">
+								<h5 class="item_price">¥2999.00</h5>
+							</div>
+							<div class="rating">
+								<span>☆</span>
+								<span>☆</span>
+								<span>☆</span>
+								<span>☆</span>
+								<span>☆</span>
+							</div>
+							<div class="clearfix"></div>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-6 gallery-grid glry-two">
+					<a href="products.html"><img src="http://oq3mpwc6v.bkt.clouddn.com/%E6%BE%B3%E6%B4%B21.jpg" class="img-responsive" alt=""/>
+						<div class="gallery-info galrr-info-two">
+							<p><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span> view</p>
+							<a class="shop" href="products.html">SHOP NOW</a>
+							<div class="clearfix"> </div>
+						</div>
+					</a>
+					<div class="galy-info">
+						<p>奔富洛神山庄 干红葡萄酒750ml*6瓶装 澳州原瓶进口红酒整箱 奔富系列</p>
+						<div class="galry">
+							<div class="prices">
+								<h5 class="item_price">¥229.00</h5>
+							</div>
+							<div class="rating">
+								<span>☆</span>
+								<span>☆</span>
+								<span>☆</span>
+								<span>☆</span>
+								<span>☆</span>
+							</div>
+							<div class="clearfix"></div>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-2 gallery-grid ">
+					<a href="products.html"><img src="http://oq3mpwc6v.bkt.clouddn.com/%E9%85%92%E4%BB%99%E7%BD%911.png" class="img-responsive" alt=""/>
+						<div class="gallery-info">
+							<p><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span> view</p>
+							<a class="shop" href="products.html">SHOP NOW</a>
+							<div class="clearfix"> </div>
+						</div>
+					</a>
+					<div class="galy-info">
+						<p>酒仙网 澳大利亚原瓶原装进口红酒 黄尾袋鼠西拉红葡萄酒（6瓶装）</p>
+						<div class="galry">
+							<div class="prices">
+								<h5 class="item_price">¥269.00</h5>
+							</div>
+							<div class="rating">
+								<span>☆</span>
+								<span>☆</span>
+								<span>☆</span>
+								<span>☆</span>
+								<span>☆</span>
+							</div>
+							<div class="clearfix"></div>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-2 gallery-grid ">
+					<a href="products.html"><img src="http://oq3mpwc6v.bkt.clouddn.com/%E6%8B%89%E8%8F%B26.jpg" class="img-responsive" alt=""/>
+						<div class="gallery-info">
+							<p><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span> view</p>
+							<a class="shop" href="products.html">SHOP NOW</a>
+							<div class="clearfix"> </div>
+						</div>
+					</a>
+					<div class="galy-info">
+						<p>法国原瓶进口红酒 路易拉菲干红葡萄酒整箱六支装750ml*6</p>
+						<div class="galry">
+							<div class="prices">
+								<h5 class="item_price">¥299.00</h5>
+							</div>
+							<div class="rating">
+								<span>☆</span>
+								<span>☆</span>
+								<span>☆</span>
+								<span>☆</span>
+								<span>☆</span>
+							</div>
+							<div class="clearfix"></div>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-2 gallery-grid ">
+					<a href="products.html"><img src="http://oq3mpwc6v.bkt.clouddn.com/%E8%8C%85%E5%8F%B02.jpg" class="img-responsive" alt=""/>
+						<div class="gallery-info">
+							<p><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span> view</p>
+							<a class="shop" href="products.html">SHOP NOW</a>
+							<div class="clearfix"> </div>
+						</div>
+					</a>
+					<div class="galy-info">
+						<p>陈年老酒 贵州茅台酒（大木漆珍品）2012年 53度 500ml*4瓶整箱 盛世陈香</p>
+						<div class="galry">
+							<div class="prices">
+								<h5 class="item_price">¥11399.00</h5>
+							</div>
+							<div class="rating">
+								<span>☆</span>
+								<span>☆</span>
+								<span>☆</span>
+								<span>☆</span>
+								<span>☆</span>
+							</div>
+							<div class="clearfix"></div>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-2 gallery-grid ">
+					<a href="products.html"><img src="http://oq3mpwc6v.bkt.clouddn.com/%E4%BA%94%E7%B2%AE%E6%B6%B21.jpg" class="img-responsive" alt=""/>
+						<div class="gallery-info">
+							<p><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span> view</p>
+							<a class="shop" href="products.htmll">SHOP NOW</a>
+							<div class="clearfix"> </div>
+						</div>
+					</a>
+					<div class="galy-info">
+						<p>华致酒行 50°五粮液陈酿年份酒10年消费装（2016版）500ml</p>
+						<div class="galry">
+							<div class="prices">
+								<h5 class="item_price">¥9999.00</h5>
+							</div>
+							<div class="rating">
+								<span>☆</span>
+								<span>☆</span>
+								<span>☆</span>
+								<span>☆</span>
+								<span>☆</span>
+							</div>
+							<div class="clearfix"></div>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-2 gallery-grid ">
+					<a href="products.html"><img src="http://oq3mpwc6v.bkt.clouddn.com/%E4%BA%94%E7%B2%AE%E6%B6%B22.jpg" class="img-responsive" alt=""/>
+						<div class="gallery-info">
+							<p><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span> view</p>
+							<a class="shop" href="products.htmll">SHOP NOW</a>
+							<div class="clearfix"> </div>
+						</div>
+					</a>
+					<div class="galy-info">
+						<p>陈年老酒 五粮液酒 原瓶老酒 约22年酒龄 1995年52度浓香型500ML</p>
+						<div class="galry">
+							<div class="prices">
+								<h5 class="item_price">¥2350.00</h5>
+							</div>
+							<div class="rating">
+								<span>☆</span>
+								<span>☆</span>
+								<span>☆</span>
+								<span>☆</span>
+								<span>☆</span>
+							</div>
+							<div class="clearfix"></div>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-2 gallery-grid ">
+					<a href="products.html"><img src="http://oq3mpwc6v.bkt.clouddn.com/%E5%AE%9D%E6%A0%91%E8%A1%8C1.jpg" class="img-responsive" alt=""/>
+						<div class="gallery-info">
+							<p><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span> view</p>
+							<a class="shop" href="products.html">SHOP NOW</a>
+							<div class="clearfix"> </div>
+						</div>
+					</a>
+					<div class="galy-info">
+						<p>宝树行 轩尼诗XO700mL 整箱六支装 干邑白兰地法国原装进口洋酒0.7L</p>
+						<div class="galry">
+							<div class="prices">
+								<h5 class="item_price">¥7620.00</h5>
+							</div>
+							<div class="rating">
+								<span>☆</span>
+								<span>☆</span>
+								<span>☆</span>
+								<span>☆</span>
+								<span>☆</span>
+							</div>
+							<div class="clearfix"></div>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-3 gallery-grid ">
+					<a href="products.html"><img src="http://oq3mpwc6v.bkt.clouddn.com/xo3.jpg" class="img-responsive" alt=""/>
+						<div class="gallery-info">
+							<p><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span> view</p>
+							<a class="shop" href="products.html">SHOP NOW</a>
+							<div class="clearfix"> </div>
+						</div>
+					</a>
+					<div class="galy-info">
+						<p>轩尼诗（Hennessy）XO 干邑白兰地 40度法国进口洋酒 700ml整箱6瓶装</p>
+						<div class="galry">
+							<div class="prices">
+								<h5 class="item_price">¥8288.00</h5>
+							</div>
+							<div class="rating">
+								<span>☆</span>
+								<span>☆</span>
+								<span>☆</span>
+								<span>☆</span>
+								<span>☆</span>
+							</div>
+							<div class="clearfix"></div>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-3 gallery-grid ">
+					<a href="products.html"><img src="http://oq3mpwc6v.bkt.clouddn.com/%E5%AE%9D%E6%A0%91%E8%A1%8C2.jpg" class="img-responsive" alt=""/>
+						<div class="gallery-info">
+							<p><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span> view</p>
+							<a class="shop" href="products.html">SHOP NOW</a>
+							<div class="clearfix"> </div>
+						</div>
+					</a>
+					<div class="galy-info">
+						<p>宝树行 人头马路易十三700mL Remy Martin LouisXIII干邑白兰地洋酒</p>
+						<div class="galry">
+							<div class="prices">
+								<h5 class="item_price">¥17800.00</h5>
+							</div>
+							<div class="rating">
+								<span>☆</span>
+								<span>☆</span>
+								<span>☆</span>
+								<span>☆</span>
+								<span>☆</span>
+							</div>
+							<div class="clearfix"></div>
+						</div>
+					</div>
+				</div>
+        <div class="col-md-3 gallery-grid ">
+					<a href="products.html"><img src="http://oq3mpwc6v.bkt.clouddn.com/%E7%BA%A2%E8%91%A1%E8%90%843.jpg" class="img-responsive" alt=""/>
+						<div class="gallery-info">
+							<p><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span> view</p>
+							<a class="shop" href="products.html">SHOP NOW</a>
+							<div class="clearfix"> </div>
+						</div>
+					</a>
+					<div class="galy-info">
+						<p>法国原瓶进口红酒 波尔多AOC级圣马丁王子干红葡萄酒玛嘉唯诺750ml 13%vol重瓶型六支装+酒具套装</p>
+						<div class="galry">
+							<div class="prices">
+								<h5 class="item_price">¥208.00</h5>
+							</div>
+							<div class="rating">
+								<span>☆</span>
+								<span>☆</span>
+								<span>☆</span>
+								<span>☆</span>
+								<span>☆</span>
+							</div>
+							<div class="clearfix"></div>
+						</div>
+					</div>
+				</div>
+        <div class="col-md-3 gallery-grid ">
+					<a href="products.html"><img src="http://oq3mpwc6v.bkt.clouddn.com/%E4%BA%8C%E9%94%85%E5%A4%B41.jpg" class="img-responsive" alt=""/>
+						<div class="gallery-info">
+							<p><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span> view</p>
+							<a class="shop" href="products.html">SHOP NOW</a>
+							<div class="clearfix"> </div>
+						</div>
+					</a>
+					<div class="galy-info">
+						<p>牛栏山 经典 52度 500ml*6瓶 整箱装</p>
+						<div class="galry">
+							<div class="prices">
+								<h5 class="item_price">¥2199.00</h5>
+							</div>
+							<div class="rating">
+								<span>☆</span>
+								<span>☆</span>
+								<span>☆</span>
+								<span>☆</span>
+								<span>☆</span>
+							</div>
+							<div class="clearfix"></div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!--//gallery-->
+
 
 </html>
