--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -133,14 +133,14 @@
 	         <script type="text/javascript" src="app/assets.application.js"></script>
 		</div>
     <!--gallery-->
-	<div class="gallery">
+<div class="gallery">
 		<div class="container">
 			<div class="gallery-grids">
 				<div class="col-md-6 gallery-grid glry-one">
-					<a href="products/1"><img src="http://oq3mpwc6v.bkt.clouddn.com/%E5%A5%94%E5%AF%8C1.jpg" class="img-responsive" alt=""/>
+					<a href="products/8"><img src="http://oq3mpwc6v.bkt.clouddn.com/%E5%A5%94%E5%AF%8C1.jpg" class="img-responsive" alt=""/>
 						<div class="gallery-info">
 							<p><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span> view</p>
-							<a class="shop" rel="nofollow" data-method="post" href="/products/1/add_to_cart">加入购物车</a>
+							<a class="shop" rel="nofollow" data-method="post" href="/products/8/add_to_cart">加入购物车</a>
 							<div class="clearfix"> </div>
 						</div>
 					</a>
@@ -148,7 +148,7 @@
 						<p>奔富407干红葡萄酒 澳洲BIN407 原瓶进口红酒 2014年木塞整箱 750ml*6</p>
 						<div class="galry">
 							<div class="prices">
-								<h5 class="item_price">¥2999.00</h5>
+								<h5><a class="item_add" href="#"><i></i></a> <span class=" item_price">¥2999</span></h5>
 							</div>
 							<div class="rating">
 								<span>☆</span>
@@ -162,10 +162,10 @@
 					</div>
 				</div>
 				<div class="col-md-6 gallery-grid glry-two">
-					<a href="products.html"><img src="http://oq3mpwc6v.bkt.clouddn.com/%E6%BE%B3%E6%B4%B21.jpg" class="img-responsive" alt=""/>
+					<a href="products/9"><img src="http://oq3mpwc6v.bkt.clouddn.com/%E6%BE%B3%E6%B4%B21.jpg" class="img-responsive" alt=""/>
 						<div class="gallery-info galrr-info-two">
 							<p><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span> view</p>
-							<a class="shop" href="products.html">SHOP NOW</a>
+							<a class="shop" rel="nofollow" data-method="post" href="/products/9/add_to_cart">加入购物车</a>
 							<div class="clearfix"> </div>
 						</div>
 					</a>
@@ -187,10 +187,10 @@
 					</div>
 				</div>
 				<div class="col-md-2 gallery-grid ">
-					<a href="products.html"><img src="http://oq3mpwc6v.bkt.clouddn.com/%E9%85%92%E4%BB%99%E7%BD%911.png" class="img-responsive" alt=""/>
+					<a href="products/10"><img src="http://oq3mpwc6v.bkt.clouddn.com/%E9%85%92%E4%BB%99%E7%BD%911.png" class="img-responsive" alt=""/>
 						<div class="gallery-info">
 							<p><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span> view</p>
-							<a class="shop" href="products.html">SHOP NOW</a>
+							<a class="shop" rel="nofollow" data-method="post" href="/products/10/add_to_cart">加入购物车</a>
 							<div class="clearfix"> </div>
 						</div>
 					</a>
@@ -212,10 +212,10 @@
 					</div>
 				</div>
 				<div class="col-md-2 gallery-grid ">
-					<a href="products.html"><img src="http://oq3mpwc6v.bkt.clouddn.com/%E6%8B%89%E8%8F%B26.jpg" class="img-responsive" alt=""/>
+					<a href="products/11"><img src="http://oq3mpwc6v.bkt.clouddn.com/%E6%8B%89%E8%8F%B26.jpg" class="img-responsive" alt=""/>
 						<div class="gallery-info">
 							<p><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span> view</p>
-							<a class="shop" href="products.html">SHOP NOW</a>
+							<a class="shop" rel="nofollow" data-method="post" href="/products/11/add_to_cart">加入购物车</a>
 							<div class="clearfix"> </div>
 						</div>
 					</a>
@@ -237,10 +237,10 @@
 					</div>
 				</div>
 				<div class="col-md-2 gallery-grid ">
-					<a href="products.html"><img src="http://oq3mpwc6v.bkt.clouddn.com/%E8%8C%85%E5%8F%B02.jpg" class="img-responsive" alt=""/>
+					<a href="products/12"><img src="http://oq3mpwc6v.bkt.clouddn.com/%E8%8C%85%E5%8F%B02.jpg" class="img-responsive" alt=""/>
 						<div class="gallery-info">
 							<p><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span> view</p>
-							<a class="shop" href="products.html">SHOP NOW</a>
+							<a class="shop" rel="nofollow" data-method="post" href="/products/12/add_to_cart">加入购物车</a>
 							<div class="clearfix"> </div>
 						</div>
 					</a>
@@ -262,10 +262,10 @@
 					</div>
 				</div>
 				<div class="col-md-2 gallery-grid ">
-					<a href="products.html"><img src="http://oq3mpwc6v.bkt.clouddn.com/%E4%BA%94%E7%B2%AE%E6%B6%B21.jpg" class="img-responsive" alt=""/>
+					<a href="products/13"><img src="http://oq3mpwc6v.bkt.clouddn.com/%E4%BA%94%E7%B2%AE%E6%B6%B21.jpg" class="img-responsive" alt=""/>
 						<div class="gallery-info">
 							<p><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span> view</p>
-							<a class="shop" href="products.htmll">SHOP NOW</a>
+							<a class="shop" rel="nofollow" data-method="post" href="/products/13/add_to_cart">加入购物车</a>
 							<div class="clearfix"> </div>
 						</div>
 					</a>
@@ -287,10 +287,10 @@
 					</div>
 				</div>
 				<div class="col-md-2 gallery-grid ">
-					<a href="products.html"><img src="http://oq3mpwc6v.bkt.clouddn.com/%E4%BA%94%E7%B2%AE%E6%B6%B22.jpg" class="img-responsive" alt=""/>
+					<a href="products/14"><img src="http://oq3mpwc6v.bkt.clouddn.com/%E4%BA%94%E7%B2%AE%E6%B6%B22.jpg" class="img-responsive" alt=""/>
 						<div class="gallery-info">
 							<p><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span> view</p>
-							<a class="shop" href="products.htmll">SHOP NOW</a>
+							<a class="shop" rel="nofollow" data-method="post" href="/products/14/add_to_cart">加入购物车</a>
 							<div class="clearfix"> </div>
 						</div>
 					</a>
@@ -312,10 +312,10 @@
 					</div>
 				</div>
 				<div class="col-md-2 gallery-grid ">
-					<a href="products.html"><img src="http://oq3mpwc6v.bkt.clouddn.com/%E5%AE%9D%E6%A0%91%E8%A1%8C1.jpg" class="img-responsive" alt=""/>
+					<a href="products/15"><img src="http://oq3mpwc6v.bkt.clouddn.com/%E5%AE%9D%E6%A0%91%E8%A1%8C1.jpg" class="img-responsive" alt=""/>
 						<div class="gallery-info">
 							<p><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span> view</p>
-							<a class="shop" href="products.html">SHOP NOW</a>
+							<a class="shop" rel="nofollow" data-method="post" href="/products/15/add_to_cart">加入购物车</a>
 							<div class="clearfix"> </div>
 						</div>
 					</a>
@@ -337,10 +337,10 @@
 					</div>
 				</div>
 				<div class="col-md-3 gallery-grid ">
-					<a href="products.html"><img src="http://oq3mpwc6v.bkt.clouddn.com/xo3.jpg" class="img-responsive" alt=""/>
+					<a href="products/16"><img src="http://oq3mpwc6v.bkt.clouddn.com/xo3.jpg" class="img-responsive" alt=""/>
 						<div class="gallery-info">
 							<p><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span> view</p>
-							<a class="shop" href="products.html">SHOP NOW</a>
+							<a class="shop" rel="nofollow" data-method="post" href="/products/16/add_to_cart">加入购物车</a>
 							<div class="clearfix"> </div>
 						</div>
 					</a>
@@ -362,10 +362,10 @@
 					</div>
 				</div>
 				<div class="col-md-3 gallery-grid ">
-					<a href="products.html"><img src="http://oq3mpwc6v.bkt.clouddn.com/%E5%AE%9D%E6%A0%91%E8%A1%8C2.jpg" class="img-responsive" alt=""/>
+					<a href="products/17"><img src="http://oq3mpwc6v.bkt.clouddn.com/%E5%AE%9D%E6%A0%91%E8%A1%8C2.jpg" class="img-responsive" alt=""/>
 						<div class="gallery-info">
 							<p><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span> view</p>
-							<a class="shop" href="products.html">SHOP NOW</a>
+							<a class="shop" rel="nofollow" data-method="post" href="/products/17/add_to_cart">加入购物车</a>
 							<div class="clearfix"> </div>
 						</div>
 					</a>
@@ -387,10 +387,10 @@
 					</div>
 				</div>
         <div class="col-md-3 gallery-grid ">
-					<a href="products.html"><img src="http://oq3mpwc6v.bkt.clouddn.com/%E7%BA%A2%E8%91%A1%E8%90%843.jpg" class="img-responsive" alt=""/>
+					<a href="products/18"><img src="http://oq3mpwc6v.bkt.clouddn.com/%E7%BA%A2%E8%91%A1%E8%90%843.jpg" class="img-responsive" alt=""/>
 						<div class="gallery-info">
 							<p><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span> view</p>
-							<a class="shop" href="products.html">SHOP NOW</a>
+							<a class="shop" rel="nofollow" data-method="post" href="/products/18/add_to_cart">加入购物车</a>
 							<div class="clearfix"> </div>
 						</div>
 					</a>
@@ -412,10 +412,10 @@
 					</div>
 				</div>
         <div class="col-md-3 gallery-grid ">
-					<a href="products.html"><img src="http://oq3mpwc6v.bkt.clouddn.com/%E4%BA%8C%E9%94%85%E5%A4%B41.jpg" class="img-responsive" alt=""/>
+					<a href="products/19"><img src="http://oq3mpwc6v.bkt.clouddn.com/%E4%BA%8C%E9%94%85%E5%A4%B41.jpg" class="img-responsive" alt=""/>
 						<div class="gallery-info">
 							<p><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span> view</p>
-							<a class="shop" href="products.html">SHOP NOW</a>
+							<a class="shop" rel="nofollow" data-method="post" href="/products/19/add_to_cart">加入购物车</a>
 							<div class="clearfix"> </div>
 						</div>
 					</a>
@@ -440,6 +440,42 @@
 		</div>
 	</div>
 	<!--//gallery-->
-
+  <!--start-team-->
+  		<div class="team" id="team">
+  	      <div class="container">
+  			<div class="main">
+  				<ul class="ch-grid">
+  					<li>
+  						<div class="ch-item">
+  							<div class="ch-info">
+  								<h3>品天下名酒</h3>
+  								<p>国酒茅台 玉液之冠<a href="#">金奖茅台酒 诚交天下友</a></p>
+  							</div>
+  							<div class="ch-thumb ch-img-1"></div>
+  						</div>
+  					</li>
+  					<li>
+  						<div class="ch-item">
+  							<div class="ch-info">
+  								<h3>品天下名酒</h3>
+  								<p>天下三千年，五粮成玉液<a href="#">清香醇纯，回味无穷</a></p>
+  							</div>
+  							<div class="ch-thumb ch-img-2"></div>
+  						</div>
+  					</li>
+  					<li>
+  						<div class="ch-item">
+  							<div class="ch-info">
+  								<h3>品天下名酒</h3>
+  								<p>法国尊享，定位全球<a href="#">传承法国，保真佳酿</a></p>
+  							</div>
+  							<div class="ch-thumb ch-img-3"></div>
+  						</div>
+  					</li>
+  				</ul>
+  			</div>
+  		</div>
+         </div>
+  	<!--//team-->
 
 </html>
