--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -345,3 +345,24 @@ html { height: 100%;}
       margin-top: 1em;
   }
   /*--//gallery--*/
+
+/*--//search--*/
+.navbar-left {
+  float: initial;
+  margin-top: 10px;
+  width: 300px;
+}
+
+.search-id {
+  width: 200px;
+  padding-top: 7px;
+}
+
+.page-wrap {
+  margin-top: 50px;//搜索页面距离顶部的距离
+}
+
+.input-group {
+  left: 13px;//搜索栏距离左边距离
+}
+/*--//search--*/
