_footer.html.erb

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -219,16 +219,16 @@
 	padding:1.5em 0 0 2em;
 	margin:0;
 }
-.footer-grid ul li{
+.footer-grid ul{
 	color:#7E7E7E;
 	margin:0 0 10px;
 }
-.footer-grid ul li a{
+.footer-grid ul a{
 	color:#7E7E7E;
 	font-size:14px;
 	text-decoration:none;
 }
-.footer-grid ul li a:hover{
+.footer-grid ul a:hover{
 	text-decoration:none;
 	color:#f65a5b;
 }
