--- a/app/views/common/_footer.html.erb
+++ b/app/views/common/_footer.html.erb
@@ -11,34 +11,43 @@
 				<h6>公司地址</h6>
 				<p>广西壮族自治区南宁市民族大道131号航洋国际城国际购物中心1楼0000号
           <br>亚洲  >  中国  >  广西壮族自治区  >  南宁市
-          <br>电话号码： +86 771 123 4567
+          <br>电话号码： +86 0771 123 4567
         </p>
 			</div>
 			<div class="col-md-3 footer-grid">
 				<h6>信息</h6>
 				<ul>
-					<li><a href="#">关于我们</a></li>
-					<li><a href="#">配送信息</a></li>
-					<li><a href="#">隐私政策</a></li>
-					<li><a href="#">条款和条件</a></li>
+					<a href="#">关于我们</a>
+					<br>
+					<a href="#">配送信息</a>
+					<br>
+					<a href="#">隐私政策</a>
+					<br>
+					<a href="#">条款和条件</a>
 				</ul>
 			</div>
 			<div class="col-md-3 footer-grid">
 				<h6>我的账户</h6>
 				<ul>
-					<li><a href="#">我的账户</a></li>
-					<li><a href="https://agile-basin-17907.herokuapp.com/account/orders">订单历史记录</a></li>
-					<li><a href="#">愿望清单</a></li>
-					<li><a href="#">☎️</a></li>
+					<a href="#">我的账户</a>
+					<br>
+					<a href="https://agile-basin-17907.herokuapp.com/account/orders">订单历史记录</a>
+					<br>
+					<a href="#">愿望清单</a>
+					<br>
+					<a href="#">☎️</a>0777-1234567
 				</ul>
 			</div>
 			<div class="col-md-3 footer-grid">
 				<h6>附加功能：</h6>
 				<ul>
-					<li><a href="#">品牌</a></li>
-					<li><a href="#">Gift Vouchers</a></li>
-					<li><a href="#">合作公司</a></li>
-					<li><a href="#">特价</a></li>
+					<a href="#">品牌</a>
+					<br>
+					<a href="#">Gift Vouchers</a>
+					<br>
+					<a href="#">合作公司</a>
+					<br>
+					<a href="#">特价</a>
 				</ul>
 			</div>
 			<div class="clearfix"></div>
