--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -8,7 +8,16 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li class="active">
+            <li>
+              <%= link_to("葡萄酒", wine_products_path) %>
+            </li>
+            <li>
+              <%= link_to("白酒", spirit_products_path) %>
+            </li>
+            <li>
+              <%= link_to("洋酒", brandy_products_path) %>
+            </li>
+            <li>
               <%= link_to("Products", products_path) %>
             </li>
           </ul>
@@ -23,7 +32,7 @@
                 </div>
               </div>
               <% end %>
-            </ul>  
+            </ul>
             <ul class="nav navbar-nav navbar-right">
               <li>
                 <%= link_to carts_path do  %>
