_navbar.html.erb

--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -61,6 +61,7 @@
                     </ul>
                   </li>
                 <% end %>
+                <script src="https://qiyukf.com/script/bbf1b1a55866dcda58943e9b88c6c81d.js" defer async></script>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
